Bug 90243 - SIDEBAR: Named shapes incorrectly named in custom animation tab
Summary: SIDEBAR: Named shapes incorrectly named in custom animation tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: low trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Sidebar-Animation
  Show dependency treegraph
 
Reported: 2015-03-26 04:31 UTC by Yousuf Philips (jay) (retired)
Modified: 2018-08-04 12:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-03-26 04:31:24 UTC
Steps:
1) Open Impress
2) Add a shape
3) Add a name (right-click > Name or Format > Name)
4) Add custom animation to it
5) Notice the custom animation entry is labelled "Shape '[Name]' 1"

Version: 4.5.0.0.alpha0+
Build ID: 38c22ed2b8b8f3530b8a0fe5a23a329e8e511c76
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-24_13:02:39
Comment 1 Buovjaga 2015-03-31 09:14:06 UTC
Not reproduced!

Win 7 Pro 64-bit Version: 4.5.0.0.alpha0+
Build ID: 8c3cf9dd48e40604867d3a28bddaccd65142df17
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-03-27_15:15:18
Locale: fi_FI
Comment 2 Yousuf Philips (jay) (retired) 2015-03-31 09:25:48 UTC
To be more clear. In step 3 if you set the name of the shape as 'people', the shape will be labelled "Shape 'people' 1".

I believe this to be incorrect because if the shape was not named, it was labelled "Shape 1".
Comment 3 Buovjaga 2015-03-31 09:29:35 UTC
Thanks for clarification, setting to NEW.

Changing version per discussion with Jay on IRC.

Priority changed per https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 4 Robinson Tryon (qubit) 2016-08-25 05:26:52 UTC Comment hidden (obsolete)
Comment 5 Heiko Tietze 2018-04-10 09:08:03 UTC
Don't see an issue here. Shape with name Foo and text Bar is listed as "Shape 'Foo' 1: Bar". All information are there. => WFM
Comment 6 Yousuf Philips (jay) (retired) 2018-04-10 22:34:43 UTC
(In reply to Heiko Tietze from comment #5)
> Don't see an issue here. Shape with name Foo and text Bar is listed as
> "Shape 'Foo' 1: Bar". All information are there. => WFM

Look in the navigator, the shape will be listed as "Foo" and not "Shape 'Foo' 1", this is the issue that should be corrected.
Comment 7 Heiko Tietze 2018-04-10 23:12:33 UTC
(In reply to Yousuf Philips (jay) (retired) from comment #6)
> (In reply to Heiko Tietze from comment #5)
> > Don't see an issue here. Shape with name Foo and text Bar is listed as
> > "Shape 'Foo' 1: Bar". All information are there. => WFM
> 
> Look in the navigator, the shape will be listed as "Foo" and not "Shape
> 'Foo' 1", this is the issue that should be corrected.

Navigator says Slide 1 > Foo and Animation "Shape 'Foo' 1: Bar". What do you expect?
Comment 8 Commit Notification 2018-06-19 13:25:33 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e559d360d0a19715bd6261b7dfc7f03eb7c9b99e

tdf#90243 don't append index if shape already has a name.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-07-20 17:21:17 UTC
A polite ping to Mark Hung:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?

OTOH, should it be backported to branch 6.1 ?

Thanks