tdf#90243 don't append index if shape already has a name.

Change-Id: I518ad83bf3782af7cb3144982ec8844a573f0de4
Reviewed-on: https://gerrit.libreoffice.org/56051
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>